Bug 477113 - RTL text-align changes throughout the theme because of bug 299837. r=ehsan
UltraBlame original commit: 69cb1df1cb0f4a47fb7711b274c7b88872932580

--- a/toolkit/themes/pinstripe/global/datetimepicker.css
+++ b/toolkit/themes/pinstripe/global/datetimepicker.css
@@ -622,32 +622,7 @@ text
 -
 align
 :
-right
-;
-}
-html
-|
-*
-.
-datetimepicker
--
-input
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-text
--
-align
-:
-left
+end
 ;
 }
 .
